migrate from junit4 to junit5 + update deps